force-app/main/default/objects/Case_Audit__c/Case_Audit__c.object-meta.xml
<CustomObject>
    <description>This object stores the data for Case audits.</description>
    <label>Case Audit</label>
    <nameField>
        <displayFormat>CA-{000000000}</displayFormat>
        <label>Case Audit Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case Audits</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>