force-app/main/default/objects/Case_Audit__c/fields/Auditor_Comments__c.field-meta.xml
<CustomField>
    <fullName>Auditor_Comments__c</fullName>
    <label>Auditor Comments</label>
    <length>50000</length>
    <type>LongTextArea</type>
</CustomField>