force-app/main/default/objects/Case_Audit__c/fields/Case_Audit_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Case_Audit_Timestamp__c</fullName>
    <label>Case Audit Timestamp</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>