force-app/main/default/objects/Case_Audit__c/fields/Case_Auditor__c.field-meta.xml
<CustomField>
    <fullName>Case_Auditor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case Auditor</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Case_Audits</relationshipName>
    <type>Lookup</type>
</CustomField>