force-app/main/default/objects/Case_Audit__c/fields/Case_Documentation__c.field-meta.xml
<CustomField>
    <fullName>Case_Documentation__c</fullName>
    <description>Case includes logs, technical data, AR, Jira, Subject, Problem Description, clear documentation, Accurate documentation of log analysis</description>
    <inlineHelpText>Case includes logs, technical data, AR, Jira, Subject, Problem Description, clear documentation, Accurate documentation of log analysis</inlineHelpText>
    <label>Case Documentation</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Case_Audit_Rating</valueSetName>
    </valueSet>
</CustomField>