force-app/main/default/objects/Case_Audit__c/fields/Case_Field_Classification__c.field-meta.xml
<CustomField>
    <fullName>Case_Field_Classification__c</fullName>
    <description>SW Version, Product Line, Functional Area, Component, Sub Component (if others, specified well)</description>
    <inlineHelpText>SW Version, Product Line, Functional Area, Component, Sub Component (if others, specified well)</inlineHelpText>
    <label>Case Field Classification</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Case_Audit_Rating</valueSetName>
    </valueSet>
</CustomField>