force-app/main/default/objects/Case_Audit__c/fields/Case_Owner__c.field-meta.xml
<CustomField>
    <fullName>Case_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Case_Audits1</relationshipName>
    <type>Lookup</type>
</CustomField>