force-app/main/default/objects/Case_Audit__c/fields/Final_Audit_Score__c.field-meta.xml
<CustomField>
    <fullName>Final_Audit_Score__c</fullName>
    <label>Final Audit Score</label>
    <precision>5</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>