force-app/main/default/objects/Case_Audit__c/fields/Overall_Case_management__c.field-meta.xml
<CustomField>
    <fullName>Overall_Case_management__c</fullName>
    <description>Following the processes outlined in Support Handbook &amp; CEMPRO, Set and met expectations, Displayed sense of urgency, Ownership, displayed positive attitude</description>
    <inlineHelpText>Following the processes outlined in Support Handbook &amp; CEMPRO, Set and met expectations, Displayed sense of urgency, Ownership, displayed positive attitude</inlineHelpText>
    <label>Overall Case management</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Case_Audit_Rating</valueSetName>
    </valueSet>
</CustomField>