force-app/main/default/objects/Case_Audit__c/fields/Resolution__c.field-meta.xml
<CustomField>
    <fullName>Resolution__c</fullName>
    <description>Resolution Code and Resolution Details were accurately classified</description>
    <inlineHelpText>Resolution Code and Resolution Details were accurately classified</inlineHelpText>
    <label>Resolution</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Case_Audit_Rating</valueSetName>
    </valueSet>
</CustomField>