force-app/main/default/objects/Case_Audit__c/fields/Send_Email_to_Case_Owner_s_Manager__c.field-meta.xml
<CustomField>
    <fullName>Send_Email_to_Case_Owner_s_Manager__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If selected, an email is sent to Auditor, Case Owner&apos;s Manager and Case Owner&apos;s Manager&apos;s Manager</description>
    <inlineHelpText>If selected, an email is sent to Auditor, Case Owner&apos;s Manager and Case Owner&apos;s Manager&apos;s Manager</inlineHelpText>
    <label>Send Email to Case Owner&apos;s Manager</label>
    <type>Checkbox</type>
</CustomField>